[tool.poetry]
name = "pyroll-docs"
version = "2.0.0a1"
description = "PyRoll rolling simulation framework - documentation website."
authors = [
    "Max Weiner <max.weiner@imf.tu-freiberg.de>",
    "Christoph Renzing <christoph.renzing@imf.tu-freiberg.de>",
    "Matthias Schmidtchen <matthias.schmidtchen@imf.tu-freiberg.de>",
    "Max Stirl <max.stirl@imf.tu-freiberg.de>"
]
license = "BSD-3-Clause"
homepage = "https://pyroll-project.github.io"
repository = "https://github.com/pyroll-project/pyroll-core"
documentation = "https://pyroll.readthedocs.io/en/latest"
packages = []
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
pyroll-core = "^2.0.0a"
pyroll-export = "^2.0.0a"
pyroll-report = "^2.0.0a"
pyroll-cli = "^2.0.0a"
Sphinx = "^4.5.0"
myst-parser = "^0.18.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
ipython = "^8.3.0"
schemdraw = "^0.15"
pytask = "^0.2.5"
pyroll-core = { git = "ssh://git@github.com/pyroll-project/pyroll-core.git", branch = "remove_ui" }
pyroll-report = { git = "ssh://git@github.com/pyroll-project/pyroll-report.git", branch = "main" }
pyroll-export = { git = "ssh://git@github.com/pyroll-project/pyroll-export.git", branch = "main" }
pyroll-cli = { git = "ssh://git@github.com/pyroll-project/pyroll-cli.git", branch = "main" }

[tool.poetry.scripts]
pyroll = 'pyroll.ui.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
