[project]
name = "pyroll-docs"
version = "3.1.0"
description = "Documentation for PyRolL Project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyroll-basic~=3.0",
    "sphinx~=7.0",
    "sphinx-copybutton~=0.5",
    "myst-parser~=2.0",
    "sphinx-rtd-theme~=2.0",
    "readthedocs-sphinx-ext~=2.2",
    "myst-nb~=1.0",
    "pytest~=7.0",
    "ipython~=8.0",
    "schemdraw~=0.15",
    "pytask~=0.2",
    "jupyterlab~=3.5",
    "ipywidgets~=8.1",
]

[project.scripts]
tasks = "pytask:main"
sphinx = "sphinx:main"

